--- a/css/global.css
+++ b/css/global.css
@@ -31,3 +31,15 @@ a {
     margin-left: auto;
     margin-right: auto;
 }
+
+@keyframes flutuar {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(13.5px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
