--- a/css/home.css
+++ b/css/home.css
@@ -258,23 +258,30 @@ nav ul li a:hover::after {
   height: auto;
 }
 
-#dashboards_img {
-  width: 90px;
-  height: auto;
+.tito {
+  padding-left: 18px;
 }
 
-.dashboard {
+#dashboards_img {
+  padding-left: 20px;
+  width: 150px;
+  height: 100px;
+}
+
+.dashboard a{
   color: var(--cor-vermelho);
   font-weight: 700;
   font-size: 0.9rem;
-  align-items: center;
-  justify-content: center;
-  margin-left: 50px;
-  margin-bottom: 50px;
+  align-items: right;
+  justify-content: space-between;
+  margin-left: 120px;
+  margin-bottom: 150px;
 }
 
-.tito {
-  padding-left: 18px;
+.link_dash {
+  position: absolute;
+  bottom: 30px;
+  left: 50px;
 }
 
 .info_final_texto {
