--- a/css/respansivos/home_responsivo.css
+++ b/css/respansivos/home_responsivo.css
@@ -111,6 +111,25 @@
     margin-left: 10px;
   }
 
+  #dashboards_img {
+    position: static;
+    margin-left: -30px;
+  }
+
+  .dashboard a {
+    margin-bottom: 0px;
+    margin-left: -20px;
+    font-size: 0.8rem;
+    display: block;
+    break-inside: avoid;
+  }
+
+  .link_dash {
+    position: static;
+    margin-top: 10px;
+    margin-left: -30px;
+  }
+
   .main_info {
     padding-top: 60px;
     margin-bottom: 60px;
