--- a/css/projetos.css
+++ b/css/projetos.css
@@ -1,7 +1,3 @@
-body{
-  overflow-x: hidden;
-}
-
 /*CSS do Header*/
 
 header {
@@ -76,239 +72,250 @@ nav ul li a:hover::after {
 /*Banner & Banner Info*/
 
 .banner {
-    position: relative;
-}
-
-.banner img{
-    width: 100%;
-    height: auto;
-    z-index: -1;
-}
-
-#fundo_img {
-    background-color: var(--cor-vermelho);
+  background: url("../img/img 6.png") no-repeat center center;
+  background-size: cover;
+  background-color: var(--cor-vermelho);
+  padding: 100px 20px;
 }
 
 .banner_info_container {
-    position: absolute;
-    top: 60px;
-    left: 99px;
-    z-index: 1;
-    color: #FFF; 
-    display: flex;
-    flex-direction: column;
-    gap: 17px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  color: #fff;
+  gap: 20px;
 }
 
-.banner_info_container h1{
-    font-size: 2rem;
+.banner_info_container h1 {
+  font-size: 2rem;
 }
 
 .banner_info_container p {
-    font-size: 1.25rem;
+  font-size: 1.25rem;
 }
 
 /*Teias*/
+
+.main-section {
+  position: relative;
+  padding: 80px 40px;
+  overflow: hidden; /* evita que imagens fiquem "vazando" */
+  z-index: 0;
+}
 
 .teia {
   position: absolute;
   pointer-events: none;
   z-index: -1; /* abaixo do conteúdo */
-  overflow-x: hidden;
 }
 
-#teia1-projetos {
-  top: 100px;
-  left: 800px;
+#teia1 {
+  top: 0;
+  right: 0;
   width: auto;
-  overflow-x: hidden;
 }
 
-#teia2-projetos {
-  top: 2827px;
+#teia2 {
+  bottom: 0;
   left: 0;
   width: auto;
 }
 
 /* Main */
 
-.main-container {
+.cards_container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
   max-width: 1200px;
   margin: 0 auto;
+  gap: 40px;
+  z-index: -3;
 }
 
 .cards {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 40px;
-    margin-top: -290px;
-    position: static;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 40px;
 }
 
-.card_caixa{
-    width: 560px;
-    height: 426px;
-    background-color: #FFF;
-    box-shadow: 0px 4px 4px 0px #00000040;
-    border-radius: 8px;
-    position: relative;
-    z-index: 1;
+.card_caixa {
+  width: 560px;
+  height: 426px;
+  background-color: #fff;
+  box-shadow: 0px 4px 4px 0px #00000040;
+  border-radius: 8px;
+  position: relative;
+  z-index: 1;
 }
 
 .card_caixa::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    right: 0px;
-    width: 100%;
-    height: 21px;
-    background-color: var(--before-color);
-    border-radius: 0px 0px 8px 8px;
-    pointer-events: none;
-    transition: height 0.4s ease;
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0px;
+  width: 100%;
+  height: 21px;
+  background-color: var(--before-color);
+  border-radius: 0px 0px 8px 8px;
+  pointer-events: none;
+  transition: height 0.4s ease;
 }
 
 .card_caixa:hover::after {
-    height: 180px;
+  height: 180px;
 }
 
-.card_cont{
-    position: relative;
+.card_cont {
+  position: relative;
 }
 
-.card_cont img{
-    width: 560px;
-    height: 426px;
-    border-radius: 8px;
+.card_cont img {
+  width: 560px;
+  height: 426px;
+  border-radius: 8px;
 }
 
 .card_info {
-    position: absolute;
-    right: 20px;
-    bottom: 35px;
-    z-index: 10;
+  position: absolute;
+  right: 20px;
+  bottom: 35px;
+  z-index: 10;
 }
 
-.card_info a{
-    position: relative;
-    width: 39px;
-    height: 39px;
-    border: 3px solid var(--before-color);
-    background-color: #FFFFFF;
-    border-radius: 50%;
-    display: inline-block;
+.card_info a {
+  position: relative;
+  width: 39px;
+  height: 39px;
+  border: 3px solid var(--before-color);
+  background-color: #ffffff;
+  border-radius: 50%;
+  display: inline-block;
 }
-
 
 .card_info a::after {
-    content: "";
-    position: absolute;
-    z-index: 50;
-    width: 19.8px;
-    height: 15.54px;
-    top: 11.5px;
-    left: 12.5px;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-image: var(--seta-url);
+  content: "";
+  position: absolute;
+  z-index: 50;
+  width: 19.8px;
+  height: 15.54px;
+  top: 11.5px;
+  left: 12.5px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image: var(--seta-url);
 }
 
 .card_hover_texto {
-    width: 85%;
-    height: 180px;
-    position: absolute;
-    bottom: -40px;
-    left: 20px;
-    color: #FFFFFF;
-    font-size: 1rem;
-    text-align: flex-start;
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.6s ease, visibility 0.3s ease;
-    pointer-events: none;
-    z-index: 10;
+  width: 85%;
+  height: 180px;
+  position: absolute;
+  bottom: -40px;
+  left: 20px;
+  color: #ffffff;
+  font-size: 1rem;
+  text-align: flex-start;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.6s ease, visibility 0.3s ease;
+  pointer-events: none;
+  z-index: 10;
 }
 
 .card_caixa:hover .card_hover_texto {
-    opacity: 1;
-    visibility: visible;
+  opacity: 1;
+  visibility: visible;
 }
 
-#hansenai-projeto{
-    width: 560px;
-    height: auto;
-    padding-top: 40px;
+#hansenai-projeto {
+  width: 560px;
+  height: auto;
+  padding-top: 40px;
 }
 
 /*Dashboard*/
 
-.texto-dashboard{
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    padding: 100px 0;
+.dashboard {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  max-width: 1200px;
+  margin: 0 auto;
+  gap: 40px;
+  z-index: -3;
 }
 
-.texto-dashboard h1{
-    color: var(--cor-vermelho);
-    font-size: 2rem;
+.texto-dashboard {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  padding: 100px 0;
 }
 
-.texto-dashboard p{
-    color: #282425;
-    font-size: 1.25rem;
-    font-weight: 500;
+.texto-dashboard h1 {
+  color: var(--cor-vermelho);
+  font-size: 2rem;
+}
+
+.texto-dashboard p {
+  color: #282425;
+  font-size: 1.25rem;
+  font-weight: 500;
 }
 
 .cards-dash {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 40px;
-    position: static;
-    margin-bottom: 190px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 40px;
+  position: static;
+  margin-bottom: 190px;
 }
 
-.card_caixa_dash{
-    width: 560px;
-    height: 426px;
-    background-color: #FFF;
-    box-shadow: 0px 4px 4px 0px #00000040;
-    border-radius: 8px;
-    position: relative;
-    z-index: 1;
+.card_caixa_dash {
+  width: 560px;
+  height: 426px;
+  background-color: #fff;
+  box-shadow: 0px 4px 4px 0px #00000040;
+  border-radius: 8px;
+  position: relative;
+  z-index: 1;
 }
 
 .card_caixa_dash::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    right: 0px;
-    width: 100%;
-    height: 21px;
-    background-color: var(--before-color);
-    border-radius: 0px 0px 8px 8px;
-    pointer-events: none;
-    z-index: 10;
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0px;
+  width: 100%;
+  height: 21px;
+  background-color: var(--before-color);
+  border-radius: 0px 0px 8px 8px;
+  pointer-events: none;
+  z-index: 10;
 }
 
-.card_cont_dash{
-    position: relative;
+.card_cont_dash {
+  position: relative;
 }
 
-.card_cont_dash img{
-    width: 560px;
-    height: 426px;
-    border-radius: 8px;
+.card_cont_dash img {
+  width: 560px;
+  height: 426px;
+  border-radius: 8px;
 }
 
 /* Footer */
 
 .footer {
-  background: url('/img/img 5.png') no-repeat center center;
+  background: url("../img/img 5.png") no-repeat center center;
   background-size: cover;
   background-color: var(--cor-preto);
   padding: 60px 40px 20px;
-  font-family: 'Arial', sans-serif;
+  font-family: "Arial", sans-serif;
 }
 
 .footer-container {
