--- a/css/respansivos/projetos_responsivo.css
+++ b/css/respansivos/projetos_responsivo.css
@@ -18,12 +18,12 @@
 
   nav ul {
     flex-direction: row;
-    align-items: right; 
+    align-items: right;
     gap: 15px;
     display: none;
     background-color: var(--cor-branco);
     position: absolute;
-    top: 70px; 
+    top: 80px;
     right: 20px;
     z-index: 1000;
   }
@@ -48,6 +48,10 @@
     position: relative;
   }
 
+  .banner {
+    background-position: 100% center;
+  }
+
   .banner-container {
     padding: 20px;
     align-items: center;
@@ -60,5 +64,259 @@
 
   .banner-container p {
     font-size: 1rem;
+  }
+}
+
+/* ========== MAIN ========== */
+
+/* Até 1094px */
+@media (max-width: 1094px) {
+  .main-section {
+    padding: 60px 10px;
+    max-width: 100%;
+    margin-top: 32px; /* Espaço entre banner e main */
+  }
+
+  #teia1,
+  #teia2 {
+    display: none;
+  }
+
+  .main-container {
+    flex-direction: column;
+    gap: 24px;
+    max-width: 100%;
+    margin: 0 auto;
+  }
+
+  /* Cards */
+  .card_hover_texto {
+    font-size: 0.7rem;
+    margin-right: 5px;
+  }
+
+  #valeria-texto { 
+    margin-bottom: 10px;
+  }
+
+  #tito-texto {
+    max-width: 200px;
+    max-height: auto;
+    margin-bottom: 10px;
+  }
+
+  .cards,
+  .cards-dash {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    border-radius: 15px;
+  }
+
+  .card_caixa {
+    width: 350px;
+    height: 200px;
+    padding: 10px;
+    margin: 20px auto;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    align-items: center;
+  }
+
+  /* Imagens nos cards */
+  .card_cont img,
+  #hansenai-projeto {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Preenche o card sem distorcer */
+    border-radius: 8px;
+    display: block;
+    margin: 0 auto;
+    padding-top: 0;
+  }
+
+  /* Cards do dashboard */
+  .card_caixa_dash {
+    width: 300px; /* ajuste só aqui */
+    height: auto;
+    padding: 15px;
+    margin: 20px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  /* Imagens dentro dos cards do dashboard */
+  .card_cont_dash img {
+    width: 100%;
+    height: 100%; /* altura fixa só no dashboard */
+    object-fit: cover; /* cobre o espaço sem distorcer */
+    border-radius: 10px;
+  }
+
+  /* Hover texto */
+  .card_hover_texto {
+    border-radius: 15px;
+    font-size: 0.8rem;
+  }
+
+  /* Texto Dashboard */
+  .texto-dashboard {
+    margin-top: 30px;
+  }
+
+  .texto-dashboard h1 {
+    font-size: 1.8rem;
+  }
+
+  .texto-dashboard p {
+    font-size: 1rem;
+    margin-top: -30px;
+  }
+}
+
+/* Até 600px */
+@media (max-width: 600px) {
+  main {
+    background-size: 90px auto, 120px auto;
+  }
+
+  .main-section {
+    padding: 12px 0;
+    margin-top: 20px; /* Espaço menor em telas pequenas */
+  }
+
+  /* Cards */
+  .cards,
+  .cards-dash {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 100vw;
+  }
+
+  .card_caixa {
+    width: 95vw;
+    max-width: 300px;
+    height: 250px;
+    padding: 5px;
+    margin: 12px auto;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    align-items: center;
+  }
+
+  /* Imagens nos cards */
+  .card_cont img,
+  #hansenai-projeto {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 8px;
+    display: block;
+    margin: 0 auto;
+    padding-top: 0;
+  }
+
+  /* Cards do dashboard */
+  .card_caixa_dash {
+    width: 300px; /* ajuste só aqui */
+    height: auto;
+    padding: 15px;
+    margin: 20px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  /* Imagens dentro dos cards do dashboard */
+  .card_cont_dash img {
+    width: 100%;
+    height: 100%; /* altura fixa só no dashboard */
+    object-fit: cover; /* cobre o espaço sem distorcer */
+    border-radius: 10px;
+  }
+
+  /* Texto Dashboard */
+  .texto-dashboard {
+    padding: 20px;
+    text-align: left;
+    align-items: center;
+  }
+
+  .texto-dashboard h1 {
+    font-size: 1.8rem;
+  }
+
+  .texto-dashboard p {
+    font-size: 1rem;
+  }
+}
+
+/* ========== FOOTER ========== */
+
+@media (max-width: 1024px) {
+  .footer {
+    padding: 40px 20px 20px;
+  }
+
+  .footer-container {
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+    text-align: center;
+  }
+
+  .footer-logo-contato {
+    align-items: center;
+  }
+
+  .footer-links {
+    margin: 0;
+  }
+
+  .footer-links h3 {
+    font-size: 18px;
+  }
+
+  .footer-links ul li a {
+    font-size: 15px;
+  }
+
+  .footer-bottom {
+    margin: 30px 0 0;
+    text-align: center;
+  }
+}
+
+@media (max-width: 600px) {
+  .footer-logo {
+    width: 80px;
+  }
+
+  .contato h3,
+  .footer-links h3 {
+    font-size: 16px;
+  }
+
+  .contato p {
+    font-size: 14px;
+  }
+
+  .footer-links ul li a {
+    font-size: 14px;
+  }
+
+  .footer-bottom {
+    font-size: 13px;
+  }
+
+  .icon {
+    width: 18px;
+    height: 18px;
+    margin-right: 8px;
   }
 }
